some correction for npm run build to work

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -60,7 +60,9 @@
 }
 
 
-/************ Navbar hamburger ***********/
+/* 
+* ********** Navbar hamburger ********* * 
+*/
 .gpt3__navbar-menu{
         margin-left: 1rem;
         display: none;
